Project Sustainable_Friends {
  database_type: 'MySQL'
}
Table Item {
  name VARCHAR(84) [not null]
  id BIGINT [pk, increment]
}
Table User {  
  email VARCHAR(84) [UNIQUE, not null, note: 'used as login']
  name VARCHAR(84) [not null]
  password VARCHAR(128) [not null, note: 'ARGON2']
  preferences JSON [not null]
  id BIGINT [pk, increment]
  identifier VARCHAR(32) [not null, note: 'used in DTO']
  create_time TIMESTAMP [not null, default: `CURRENT_TIMESTAMP()`]
  changed_time TIMESTAMP
  deleted_time TIMESTAMP
}
Table Personal_User_Spec {
  user_id BIGINT [pk, ref: - User.id]
  national_identity VARCHAR(11) [UNIQUE, not null, note: 'cpf']
}
Table Company_User_Spec {
  user_id BIGINT [pk, ref: - User.id]
  national_identity VARCHAR(14) [UNIQUE, not null, note: 'cnpj']
}
Table Point {
  user_id BIGINT [not null, ref: > User.id]
  latitude DECIMAL(9,6) [not null]
  longitude DECIMAL(9,6) [not null]
  changed_by BIGINT [ref: > User.id]
  deleted_by BIGINT [ref: > User.id]
  id BIGINT [pk, increment]
  identifier VARCHAR(32) [not null, note: 'used in DTO']
  create_time TIMESTAMP [not null, default: `CURRENT_TIMESTAMP()`]
  changed_time TIMESTAMP
  deleted_time TIMESTAMP
}
Table Delivery_Point_Spec {
  point_id BIGINT [pk, ref: - Point.id]
  description TEXT
}
Table Point_Item {  
  point_id BIGINT [not null, ref: > Point.id]
  item_id BIGINT [not null, ref: > Item.id]
  collected_by BIGINT [ref: > User.id]
  id BIGINT [pk, increment]
  identifier VARCHAR(32) [not null, note: 'used in DTO']
  create_time TIMESTAMP [not null, default: `CURRENT_TIMESTAMP()`]
  changed_time TIMESTAMP
  deleted_time TIMESTAMP
}
Table Health_Check {
  id INT [pk, increment]
}
